enable-tags,categories-and-excerpt-etc.

--- a/source/_posts/《超新星纪元》阅后快评.md
+++ b/source/_posts/《超新星纪元》阅后快评.md
@@ -1,7 +1,20 @@
 ---
 title: 《超新星纪元》阅后快评
+description: 
+author: JayMuShui
+#email:
 date: 2023-11-07 01:54:00
 updated: 2023-11-07 01:54:00
+readmore: true
+hideTime: false
+comments: false
+tags:
+  - 刘慈欣
+  - 科幻
+  - 读书
+categories:
+  - 感悟
+
 ---
 
 
@@ -9,14 +22,15 @@ updated: 2023-11-07 01:54:00
 *注：原版为长篇科幻小说，市面出版大部分为大量删减后的短篇小说，可通过网文平台阅读，原版又分2002年删减后出版的重写版，原稿版于1991年创作，被删减的内容主要有国土交换（1991）与京津保卫战（2002）*
 ​
 ​ 
-# 故事设定：
+# 故事设定
 
 **（共）** 1999年，在太阳系周遭星系发生超新星爆发，产生的高能射线对除了13岁以下（91年版是12岁以下）孩子拥有自愈能力外的所有人类产生了不可逆转的基因破坏，
 **（2002未删减版）** 在高能射线因此中国国家通过选拔决定最高领导人，通过家庭继承职业等方式，使得孩子们接手国家（世界各国亦如此）与而后发生的故事
 **（​1991年原稿）** 在某一刻使得全体遭到不可逆基因破坏的人类大规模去世，中国此时并选拔出接替的领导人与完成工作交接，1990s中期开发的量子计算机人工智能FG协助误打误撞闯入信息大楼的华华、小梦（2002版称作晓梦，此时也并未设置有眼睛这一角色）发布了这一研究结果并重新运作国家与而后的故事
 
+<!-- more -->
 
-# 快评：
+# 快评
 
 
 个人觉得更喜欢2002年版，1991年原稿虽然更具有科幻色彩，内核也更多是反乌托邦，但也导致其故事线开展更加的戏剧化，给我的观感更混乱了一些，存在少许不符逻辑的内容（不排除有我先入为主的可能性）在1991年版已成稿但删减掉的国土交换无疑有些唐突，但是也增添一种悲壮的国土情怀。下面着重讲解2002年版中对于孩童天性的叙述，待我有机会写个长评供我自己乐呵一下。
